--- a/app/src/main/res/layout/item_media.xml
+++ b/app/src/main/res/layout/item_media.xml
@@ -27,17 +27,15 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/mediaTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             setPosterTitle="@{mediaItem.name}"
-            android:fadingEdge="horizontal"
             android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
             android:singleLine="true"
             app:layout_constraintTop_toBottomOf="@+id/mediaImage"
-            app:layout_constraintStart_toStartOf="@+id/mediaImage"/>
+            app:layout_constraintStart_toStartOf="@+id/mediaImage"
+            app:layout_constraintEnd_toEndOf="@+id/mediaImage"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
