--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,13 @@
     <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:fontFamily">@fonts/TitilliumWeb-SemiBold</item>
     </style>
+
+    <style name="Dialog" parent="@android:style/Theme.Material.Light.Dialog.Alert">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="backgroundColor">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:titleTextColor">@color/black</item>
+        <item name="android:fontFamily">@fonts/TitilliumWeb-SemiBold</item>
+    </style>
 </resources>
