--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@drawable/nav_bar"
-                android:backgroundTint="@color/black"
+                android:background="@color/black"
                 android:theme="?attr/actionBarTheme"
                 app:titleTextColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -41,12 +40,15 @@
                     android:background="@drawable/back"
                     android:layout_marginEnd="@dimen/dp_15"/>
 
-                <TextView
+                <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/custom_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white"
+                    style="@style/titilliumSemibold"/>
             </androidx.appcompat.widget.Toolbar>
+
+
         </com.google.android.material.appbar.AppBarLayout>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
@@ -55,8 +57,10 @@
             android:id="@+id/mainRecyclervw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="@dimen/dp_15"
             android:paddingStart="@dimen/dp_15"
             android:paddingBottom="@dimen/dp_80"
+            android:background="@drawable/nav_bar"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
