--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,7 @@
         <!--This line changes the color of icons in toolbar (back, overflow menu icons)-->
         <item name="android:textColorSecondary">@color/white</item>
         <item name="android:fontFamily">@fonts/TitilliumWeb-SemiBold</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
 
     </style>
 
@@ -27,5 +28,14 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:titleTextColor">@color/black</item>
         <item name="android:fontFamily">@fonts/TitilliumWeb-SemiBold</item>
+    </style>
+
+    <style name="titilliumSemibold" parent="Widget.MaterialComponents.TextView">
+        <item name="android:fontFamily">@font/titilliumweb_semibold</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+    <style name="titilliumLight" parent="Widget.MaterialComponents.TextView">
+        <item name="android:fontFamily">@font/titilliumweb_light</item>
+        <item name="android:includeFontPadding">false</item>
     </style>
 </resources>
